<package>
  <name>bb_8_gazebo</name>
  <version>0.1.0</version>
  <description>
    Gazebo package for BB 8.
  </description>
  <author>Jose Capriles</author>
  <maintainer email="jcapriles@theconstructsim.com">Jose Capriles</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/bb_8_gazebo</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robot_controllers</build_depend>
  <build_depend>robot_controllers_interface</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>bb_8_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>rgbd_launch</run_depend>
  <run_depend>robot_controllers</run_depend>
  <run_depend>robot_controllers_interface</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>xacro</run_depend>
</package>
